@@ -1,3 +1,9 @@
+2011-08-19  Andreas Jaeger  <aj@suse.de>
+
+	[BZ #13114]
+	* libio/fileops.c (_IO_new_file_fopen): Fix handling of
+	non-existant file when using close-on-exec mode.
+
 2011-08-20  Ulrich Drepper  <drepper@gmail.com>
 
 	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_resolve): Fix CFI for
